--- a/Perspektiva/Perspektiva.csproj
+++ b/Perspektiva/Perspektiva.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
     <Folder Include="wwwroot\img\" />
     <Folder Include="wwwroot\vendor\" />
   </ItemGroup>
