--- a/Perspektiva/Properties/launchSettings.json
+++ b/Perspektiva/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "Perspektiva": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "https://localhost:44336/admin/perspective/create",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
