--- a/Perspektiva/Properties/launchSettings.json
+++ b/Perspektiva/Properties/launchSettings.json
@@ -21,7 +21,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:44336/",
+      "launchUrl": "https://localhost:44336/admin/perspective/create",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
